first class of javascript

--- a/Flexbox website/.vscode/settings.json
+++ b/Flexbox website/.vscode/settings.json
@@ -1,3 +1,23 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.port": 5501,
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#b32b00",
+        "activityBar.activeBorder": "#00bf2e",
+        "activityBar.background": "#b32b00",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#00bf2e",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "sash.hoverBorder": "#b32b00",
+        "statusBar.background": "#801f00",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#b32b00",
+        "statusBarItem.remoteBackground": "#801f00",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#801f00",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#801f0099",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.color": "#801f00"
 }
